Push prepared website

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div id="header">
 			<div id="navigation">
 				<span id="mobile-navigation">&nbsp;</span>
-				<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
+				<a href="index.html" class="logo"><img src="images/logo.jpeg" alt=""></a>
 				<ul id="menu">
 					<li class="selected">
 						<a href="index.html">Home</a>
@@ -23,15 +23,7 @@
 						<a href="about.html">About</a>
 					</li>
 					<li>
-						<a href="running.html">Running</a>
-						<ul>
-							<li>
-								<a href="runningsinglepost.html">Running single post</a>
-							</li>
-						</ul>
-					</li>
-					<li>
-						<a href="blog.html">Blog</a>
+						<a href="article.html">Article</a>
 						<ul>
 							<li>
 								<a href="blogsinglepost.html">blog single post</a>
@@ -54,7 +46,7 @@
 			<div class="body">
 				<div>
 					<h1>WINNING</h1>
-					<p>What’s more, they’re absolutely free! You can do a lot with them. You can modify them.</p>
+					<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 					<a href="blog.html" class="more">Read More</a>
 				</div>
 			</div>
