--- a/blogsinglepost.html
+++ b/blogsinglepost.html
@@ -14,7 +14,7 @@
 		<div id="header">
 			<div id="navigation">
 				<span id="mobile-navigation">&nbsp;</span>
-				<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
+				<a href="index.html" class="logo"><img src="images/logo.jpeg" alt=""></a>
 				<ul id="menu">
 					<li>
 						<a href="index.html">Home</a>
@@ -23,15 +23,7 @@
 						<a href="about.html">About</a>
 					</li>
 					<li>
-						<a href="running.html">Running</a>
-						<ul>
-							<li>
-								<a href="runningsinglepost.html">Running single post</a>
-							</li>
-						</ul>
-					</li>
-					<li>
-						<a href="blog.html">Blog</a>
+						<a href="Article.html">Article</a>
 						<ul>
 							<li>
 								<a href="blogsinglepost.html">blog single post</a>
