--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 		<div id="header">
 			<div id="navigation">
 				<span id="mobile-navigation">&nbsp;</span>
-				<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
+				<a href="index.html" class="logo"><img src="images/logo.jpeg" alt=""></a>
 				<ul id="menu">
 					<li>
 						<a href="index.html">Home</a>
@@ -23,15 +23,7 @@
 						<a href="about.html">About</a>
 					</li>
 					<li>
-						<a href="running.html">Running</a>
-						<ul>
-							<li>
-								<a href="runningsinglepost.html">Running single post</a>
-							</li>
-						</ul>
-					</li>
-					<li>
-						<a href="blog.html">Blog</a>
+						<a href="Article.html">Article</a>
 						<ul>
 							<li>
 								<a href="blogsinglepost.html">blog single post</a>
@@ -47,14 +39,14 @@
 		<div id="body" class="contact">
 			<div>
 				<h1>Contact us</h1>
-				<img src="images/map.png" alt="">
+				<img src="" alt="">
 				<h2>ADDRESS</h2>
 				<p>This is just a placeholder so that you would know what the site would look like.</p>
 				<h2>NUMBERS</h2>
 				<a href="index.html">+123456789 or +123456789</a>
 				<h2>Email</h2>
-				<a href="index.html">info@rnrnr.com</a>
-				<h4>JOIN RNRNR NOW</h4>
+				<a href="index.html">Strategic6@gmail.com</a>
+				<h4>CONTACT US NOW</h4>
 				<form action="index.html">
 					<input type="text" name="name" value="Name" onblur="this.value=!this.value?'Name':this.value;" onfocus="this.select()" onclick="this.value='';">
 					<input type="text" name="Address" value="Address" onblur="this.value=!this.value?'Address':this.value;" onfocus="this.select()" onclick="this.value='';">
