--- a/article.html
+++ b/article.html
@@ -23,7 +23,7 @@
 						<a href="about.html">About</a>
 					</li>
 					<li class="selected">
-						<a href="Article.html">Article</a>
+						<a href="article.html">Article</a>
 						<ul>
 							<li>
 								<a href="blogsinglepost.html">blog single post</a>
