--- a/blogsinglepost.html
+++ b/blogsinglepost.html
@@ -23,7 +23,7 @@
 						<a href="about.html">About</a>
 					</li>
 					<li>
-						<a href="Article.html">Article</a>
+						<a href="articles.html">Article</a>
 						<ul>
 							<li>
 								<a href="blogsinglepost.html">blog single post</a>
